[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "jupyter_ysync"
version = "0.1.0"
description = "Y-sync protocol implementation for Jupyter notebook collaboration"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "jupyter_ydoc>=2.0",
    "pycrdt>=0.8",
]

[tool.maturin]
features = ["python"]
manifest-path = "../Cargo.toml"
module-name = "jupyter_ysync"

[tool.pytest.ini_options]
testpaths = ["tests"]
